--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-language: erlang
-otp_release:
-  - R16B02
+language: erlangotp_release:
+  - 17.0
 before_install:
   - git clone https://github.com/elixir-lang/elixir
-  - cd elixir 
-  - make 
+  - cd elixir
+  - git checkout tags/v0.13.2
+  - make
   - cd ..
 before_script: "export PATH=`pwd`/elixir/bin:$PATH"
 script: "MIX_ENV=test mix do deps.get, test"
