--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ before_install:
   - git checkout tags/v0.13.2
   - make
   - cd ..
-before_script: "export PATH=`pwd`/elixir/bin:$PATH"
-script: "MIX_ENV=test mix do deps.get, test"
+before_script:
+  - export PATH=`pwd`/elixir/bin:$PATH
+  - mix local.hex --force
+  - MIX_ENV=test mix do deps.get
+script:
+  - mix test
