typo on elixir version

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ otp_release:
 before_install:
   - git clone https://github.com/elixir-lang/elixir
   - cd elixir
-  - git checkout tags/v1.0.0.-rc1
+  - git checkout tags/v1.0.0-rc1
   - make
   - cd ..
 before_script:
