--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,8 @@ otp_release:
   - 17.0
   - 17.1
 before_install:
-  - git clone https://github.com/elixir-lang/elixir
-  - cd elixir
-  - git checkout tags/v1.0.0-rc1
-  - make
-  - cd ..
+  - wget http://s3.hex.pm/builds/elixir/v1.0.0.zip
+  - unzip -d elixir v$ELIXIR.zip
 before_script:
   - export PATH=`pwd`/elixir/bin:$PATH
   - mix local.hex --force
