--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ otp_release:
   - 17.1
 before_install:
   - wget http://s3.hex.pm/builds/elixir/v1.0.0.zip
-  - unzip -d elixir v$ELIXIR.zip
+  - unzip -d elixir v1.0.0.zip
 before_script:
   - export PATH=`pwd`/elixir/bin:$PATH
   - mix local.hex --force
