--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-language: erlang
+language: elixir
+elixir: 1.0.0
 otp_release:
   - 17.0
   - 17.1
@@ -9,12 +10,7 @@ notifications:
     on_success: always  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
-before_install:
-  - wget http://s3.hex.pm/builds/elixir/v1.0.0.zip
-  - unzip -d elixir v1.0.0.zip
 before_script:
-  - export PATH=`pwd`/elixir/bin:$PATH
-  - mix local.hex --force
   - MIX_ENV=test mix do deps.get
 script:
   - mix test
