--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: elixir
-elixir: 1.0.0
+elixir:
+  - 1.1
+  - 1.2
 otp_release:
-  - 17.0
-  - 17.1
+  - 17.4
+  - 18.2
 notifications:
   webhooks:
     urls:
